# XtremeGTKShell

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.md  pyproject.toml  run.sh
docs/: Makefile  make.bat
src/: main.py  test.py
src/dbusqrscanner/: __init__.py  cli.py  dbusqrscanner.py  scanner.py
src/xgs/: __init__.py  app.py  style.py  utils.py
src/xgs/cli/: __init__.py
src/xgs/services/: battery.py  binding.py  network.py  service.py
src/xgs/widgets/: __init__.py  box.py  button.py  entry.py  images.py  label.py  misc.py  stack.py  window.py
tests/: test_xgs.py
xgs/: LICENSE  setup.py
xgs/docs/: conf.py  example.ipynb
xgs/src/xgs/: style.py  utils.py
xgs/src/xgs/cli/: __init__.py
xgs/src/xgs/services/: binding.py
xgs/src/xgs/widgets/: __init__.py  button.py  misc.py  window.py
xgs/xgs/: style.py  utils.py
xgs/xgs/cli/: __init__.py  app.py
xgs/xgs/services/: binding.py
xgs/xgs/widgets/: box.py  centerbox.py  images.py  label.py  scroll.py  stack.py  window.py
