[tool.poetry]
name = "dbusqrscanner"
version = "0.1.0"
description = "A package made for scanning qr codes"
authors = ["Axel Valles"]
license = "Apache License 2.0"
readme = "README.md"

[tool.poetry.scripts]
dbusqrscanner = "dbusqrscanner.cli:main"

[tool.poetry.dependencies]
python = "^3.9"
pygobject = "^3.50.0"
opencv-python = "^4.10.0.84"
dbus-python = "^1.3.2"

[tool.poetry.group.dev.dependencies]
pygobject-stubs = "^2.12.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
